quiz/quiz.css
a{
	text-decoration: none !important;
}
html {
	background-image: url("dark-BG.png");
	color: floralwhite;
	font-family: sans-serif;
	line-height: 2.3;
	display: block;
}

body {
	width: 100%;
	margin: 0 !important;
	padding-top: 1%;
	height: auto;
}

h1 {
	font-size: 1.5rem;
}

h2 {
	margin-top: 0;	
	margin: -2.5% 10% 10% 10%;
	line-height: 1;
	font-size: .85rem;
	font-weight: normal;
	/*	padding-top: 2%;*/
}

#back {
	/*	width: 13%;*/
	width: 2em;
	height: auto;
	top: 1em;
	visibility: hidden;
	/*	top: 1%;*/
}

#backbutton {
	left: 1em;
}

.choice {
	font-size: .95rem;
	background-color: rgba(0, 0, 0, 0);
	border: 5px solid white;
	width: 62%;
	/*width: 50%;    */
	height: auto;
	margin: 6.25% auto;
	text-align: center;
	border: 1px solid white;
	border-radius: 7px;
	margin-left: 19%;
	/*	margin-left: 25%;*/
	line-height: 1;
	/*    line-height: 2;*/
}

.header {
	text-align: left;
	margin-bottom: 12%;
}

#info_splash {
	width: 100%;
	height: auto;
	position: absolute;
	align-content: center;
	text-align: center;
	top: 1em;
}

#instructions {
	margin-top: 7%;
	width: 100%;
	height: auto;
	font-size: 1rem;
}

@media screen and (max-width: 323px) {
	#instructions {
		font-size: .98rem;
	}
}

#myBar {
	width: 0%;
	height: 100% !important;
	background-color: dimgrey;
	border-radius: 10px;
}

#myProgress {
	left: 33%;
	width: 33%;
	height: 1%;
	/*	height: 15px !important;*/
	border-radius: 10px;
	background-color: rgba(55, 70, 70, .9);
	position: absolute;
}

#next {
	width: 50%;
	height: auto;
	/*    padding-top: 1%;*/
	/*    padding-bottom: 1%;*/
	font-size: 1em;
	position: fixed;
	bottom: 6%;
	/*    position: absolute;*/
	text-align: center;
	border: 1px solid black;
	border-radius: 7px;
	margin-left: 25%;
	background-color: red;
	display: none;
	line-height: 1;
}

#playagain{
	font-size:1rem;
	border-color:white;
	background-color:white;
	color:red;
}

.question {
	display: none;
	text-align: center;
	font-size: 30;
}

#quiz {
	display: none;
	width: 100%;
	height: auto;
	position: absolute;
	align-content: center;
	text-align: center;
}

#results {
	display: none;
	text-align: center;
}

.score {
	text-align: center;
	margin: 2% 0 0 0;
	font-size: 10;
}

span {
	margin: 2%;
}

#title {
	visibility: hidden;
	position: absolute;
	left: 44%;
	font-weight: normal;
	/*	font-size: 55;*/
	font-size: 1em;
	top: .95em;
}

#understood {
	/*	padding: 1% !important;*/
	width: 55%;
	height: auto;
	position: fixed;
	bottom: 6%;
	/*	top: 20em;*/
	/*	margin-top: 40%;*/
	/*    	margin-top: 15%;*/
	text-align: center;
	border-radius: 7px;
	margin-left: 22%;
	background-color: red;
	color: white;
	font-size: 1rem;
	line-height: 1;
}

@media screen and (min-width: 360px) {
	#title {
		left: 45.5%;
		top: .5em;
	}
	#understood {
		margin-top: 45%;
	}
	#next {
		/*		top: 115%;*/
	}
	@media screen and (min-width: 375) {
		#next {
			/*			top: 128%;*/
		}
	}
}

@media screen and (min-width: 400px) {
	#title {
		left: 45.5%;
		top: .5em;
	}
	#understood {
		margin-top: 55%;
	}
	#next {
		/*		top: 128%;*/
	}
}

@media screen and (min-width: 415px) {
	#next {
		/*		top: 128%;*/
	}
	#understood {
		margin-top: 28%;
		width: 40%;
		margin-left: 28%
	}
}

@media screen and (min-width: 450px) {
	#title {
		left: 46.5%;
		top: .5em;
	}
}

@media screen and (min-width:500px) {
	.choice,
	#next {
		width: 45%;
	}
}

@media screen and (min-width: 555px) {
	#title {
		left: 47%;
		top: .5em;
	}
	#myProgress {
		left: 33%;
	}
}

@media screen and (min-width: 555px) {
	h2 {
		margin: 0 10% 10% 10%;
	}
	.header {
		margin-bottom: 8%;
	}
}

@media screen and (min-width: 600px) {
	.choice {
		margin: 4% auto;
	}
	#myProgress {
		left: 33%;
	}
	#next {
		margin-left: 27.5%;
	}
	#title {
		left: 47.5%;
		top: .5em;
		font-size: 1.15em;
	}
	#understood {
		margin-left: 29%
	}
}

@media screen and (min-width: 700px) {
	h2 {
		line-height: 1;
		font-size: .95rem;
	}
	.choice,
	#next {
		width: 40%;
	}
	.choice {
		margin: 4% auto;
	}
	#myProgress {
		left: 33%;
	}
	#next {
		margin-left: 30%;
	}
	#title {
		left: 47.5%;
		top: .5em;
		font-size: 1.15em;
	}
	#understood {
		margin-top: 18%;
		width: 38%;
		margin-left: 30%
	}
}

@media screen and (min-width: 800px) {
	.choice,
	#next {
		width: 42%;
	}
	#next {
		margin-left: 29%;
	}
	#title {
		left: 47.5%;
		top: .5em;
	}
	#understood {
		width: 35%;
		margin-left: 32%
	}
}

@media screen and (min-width: 900px) {
	.choice,
	#next {
		width: 40%;
	}
	#next {
		margin-left: 30%;
	}
	#title {
		left: 48%;
		top: .5em;
		font-size: 1.15em;
	}
	#understood {
		width: 30%;
		margin-left: 33.5%
	}
}

@media screen and (min-width: 950px) {
	.choice,
	#next {
		width: 37.5%;
	}
	#next {
		margin-left: 31%;
	}
	#understood {
		margin-top: 11.5%;
		width: 28%;
		margin-left: 34.5%
	}
}

@media screen and (min-width: 1000px) {
	.choice,
	#next {
		width: 35%;
	}
	#next {
		margin-left: 32.5%;
	}
	h2 {
		margin: 0 10% 5% 10%;
	}
	.header {
		/*		margin-bottom*/
	}
	#title {
		left: 48%;
		top: .5em;
	}
}

@media screen and (min-width: 1150px) {
	.choice,
	#next {
		width: 30%;
	}
	#next {
		margin-left: 35%;
	}
	#title {
		left: 48.25%;
		top: .5em;
	}
	#understood {
		width: 22%;
		margin-left: 38.5%
	}
}

@media screen and (min-width: 1400px) {
	.choice {
		margin: 3% auto;
	}
	.choice,
	#next {
		width: 25%;
	}
	#next {
		margin-left: 37.5%;
	}
	#title {
		left: 48.5%;
		top: .5em;
	}
}

@media screen and (min-width: 1660px) {
	html {
		line-height: 2.0;
	}
}

@media screen and (min-width: 1700px) {
	.choice,
	#next {
		width: 20%;
	}
	#next {
		margin-left: 40%;
	}
}

@media screen and (min-width: 1750px) {
	#title {
		left: 49%;
		top: .5em;
	}
	#understood {
		width: 16%;
		margin-left: 40.5%
	}
}

@media screen and (min-width:2050px) {
	.header {
		margin-bottom: 5%;
	}
}

